2011-10-20  Josep Torra  <josep@fluendo.com>

	Import of the first release.

