@@ -9,11 +9,20 @@ libgstflutimeshift_la_SOURCES = \
   flutsmpeg.c
 
 libgstflutimeshift_la_CFLAGS = \
-  $(GST_CFLAGS) $(GST_BASE_CFLAGS) $(GST_PLUGINS_BASE_CFLAGS) \
-  $(CPU_TUNE_CFLAGS) -I$(top_srcdir)/common
-libgstflutimeshift_la_LDFLAGS = $(GST_PLUGIN_LDFLAGS) $(CPU_TUNE_LDFLAGS)
+ -I$(top_srcdir)/common \
+  $(GST_CFLAGS) \
+  $(GST_BASE_CFLAGS) \
+  $(GST_PLUGINS_BASE_CFLAGS) \
+  $(CPU_TUNE_CFLAGS)
+
+libgstflutimeshift_la_LDFLAGS = \
+  $(GST_PLUGIN_LDFLAGS) \
+  $(CPU_TUNE_LDFLAGS)
+
 libgstflutimeshift_la_LIBADD = \
-  $(GST_LIBS) $(GST_BASE_LIBS) $(GST_PLUGINS_BASE_LIBS)
+  $(GST_LIBS) \
+  $(GST_BASE_LIBS) \
+  $(GST_PLUGINS_BASE_LIBS)
 
 # headers we need but don't want installed
 noinst_HEADERS = \
